add home page using js

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hello world!!!!!!!!!!!!!!!!!!!!!!!!that waas fast!!goddamn</p>
+    <header>
+        <nav><button>Home</button><button>Menu</button><button>About</button></nav>
+    </header>
+    <div id="content">
+        
+    </div>
 </body>
 </html>
